# ems-mcp

./: .gitignore  CLAUDE.md  EXPERIENCE_REPORT.md  EXPERIENCE_REPORT_2.md  EXPERIENCE_REPORT_3.md  EXPERIENCE_REPORT_4.md  README.md  get_systems.py  pyproject.toml
docs/: design.md
docs/research/: ems-api-summary.md  mcp-best-practices-exhaustive.md  mcp-best-practices.md  mcp-specification-summary.md
src/ems_mcp/: __init__.py  __main__.py  cache.py  config.py  prompts.py  resources.py  server.py
src/ems_mcp/api/: __init__.py  auth.py  client.py  models.py
src/ems_mcp/tools/: __init__.py  assets.py  discovery.py  query.py
tests/: __init__.py  conftest.py  mock_server.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_assets.py  test_auth.py  test_cache.py  test_client.py  test_config.py  test_discovery.py  test_query.py
