[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ems-mcp"
version = "0.1.0"
description = "MCP server providing LLM access to the EMS (Engine Monitoring System) API for flight data analytics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "EMS MCP Team" }
]
keywords = ["mcp", "ems", "flight-data", "analytics", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.2",
    "black>=24.0",
    "respx>=0.21",
]

[project.scripts]
ems-mcp = "ems_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/example/ems-mcp"
Documentation = "https://github.com/example/ems-mcp#readme"
Repository = "https://github.com/example/ems-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/ems_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["ems_mcp"]

[tool.black]
line-length = 100
target-version = ["py311"]
